add footer and right box

--- a/images/index.html
+++ b/images/index.html
@@ -60,6 +60,31 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </div>
 
+            <div class="right-box">
+                <h2>right box 01</h2>
+            </div>
+
+
+            <div class="right-box">
+                <h2>right box 02</h2>
+            </div>
+
+
+            <div class="right-box">
+                <h2>right box 03</h2>
+            </div>
+        </div>
+
+
+        <footer>
+            <h2>footer</h2>
+        </footer>
+    </div>
+
+
+</body>
+</html>
+
 
 
            
